[package]
name = "ipdb-parser"
version = "0.1.0"
authors = ["KasumigaokaUtaha <blacklotussaki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding = "0.2.33"
attohttpc = "0.16.0"
flate2 = "1.0.18"
shellexpand = "2.0.0"