[package]
name = "nali-rs"
version = "0.2.0"
authors = ["KasumigaokaUtaha <blacklotussaki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipdb-parser = { path = "../ipdb-parser" }
clap = "3.0.0-beta.2"
regex = "1.4.1"